feat#7 : 진행중인 작업 저장